--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -4,3 +4,9 @@
 [data]
   email = {{ $email | quote }}
   isPersonal = {{ $isPersonal }}
+
+[data.languages]
+  elixir = ["1.14.2-otp-24", "1.14.2-otp-25"]
+  erlang = ["24.3.4.6", "25.1.2"]
+  gleam = []
+  nodejs = ["19.2.0"]
