--- a/dot_vimrc.tmpl
+++ b/dot_vimrc.tmpl
@@ -26,6 +26,16 @@ set termguicolors
 set updatetime=250
 set wildmenu
 
+{{- if eq (env "TERM") "xterm-kitty" }}
+
+" kitty terminal workarounds
+" https://sw.kovidgoyal.net/kitty/faq/#using-a-color-theme-with-a-background-color-does-not-work-well-in-vim
+let &t_ut=''
+" https://github.com/vim/vim/issues/11729
+let &t_8f="\<Esc>[38;2;%lu;%lu;%lum"
+let &t_8b="\<Esc>[48;2;%lu;%lu;%lum"
+{{- end }}
+
 """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
 " INDENTATION
 """"""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""
@@ -130,15 +140,6 @@ if !exists('g:airline_symbols')
 endif
 
 let g:airline_symbols.colnr=' '
-
-" https://sw.kovidgoyal.net/kitty/faq/#using-a-color-theme-with-a-background-color-does-not-work-well-in-vim
-if &term == 'xterm-kitty'
-  let &t_ut=''
-endif
-
-" https://github.com/vim/vim/issues/11729
-let &t_8f = "\<Esc>[38;2;%lu;%lu;%lum"
-let &t_8b = "\<Esc>[48;2;%lu;%lu;%lum"
 
 " gruvbox8
 let g:gruvbox_filetype_hi_groups=1
