--- a/.chezmoiscripts/run_once_after_rebar3.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_rebar3.sh.tmpl
@@ -2,9 +2,10 @@
 
 set -efo pipefail
 
+{{ with dig "languages" "erlang" "" . -}}
 TMP=$(mktemp -d)
 REBAR3=$TMP/rebar3
-ERL_VSN={{ index (.languages.erlang | sortAlpha | reverse) 0 }}
+ERL_VSN={{ index (. | sortAlpha | reverse) 0 }}
 
 trap 'rm -rf -- "$TMP"' EXIT
 
@@ -12,3 +13,6 @@ curl -fsSL https://s3.amazonaws.com/rebar3/rebar3 -o $REBAR3
 chmod +x $REBAR3
 source $HOME/.asdf/installs/erlang/$ERL_VSN/activate
 $REBAR3 local install
+{{- else }}
+exit 0
+{{- end }}
