Wrap scripts on `with` block

--- a/.chezmoiscripts/run_once_after_00-install-languages.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_00-install-languages.sh.tmpl
@@ -1,8 +1,8 @@
+{{- with dig "languages" "" . -}}
 #!/bin/bash
 
 set -eufo pipefail
 
-{{ with dig "languages" dict . -}}
 # hash: {{ toJson . | sha256sum }}
 
 {{ range $lang, $versions := . -}}
