--- a/.chezmoiscripts/run_once_after_rebar3.sh.tmpl
+++ b/.chezmoiscripts/run_once_after_rebar3.sh.tmpl
@@ -1,8 +1,8 @@
+{{- with dig "languages" "erlang" "" . -}}
 #!/bin/bash
 
 set -efo pipefail
 
-{{ with dig "languages" "erlang" "" . -}}
 TMP=$(mktemp -d)
 REBAR3=$TMP/rebar3
 ERL_VSN={{ index (. | sortAlpha | reverse) 0 }}
@@ -15,6 +15,4 @@ chmod +x $REBAR3
 # Disable `set -u`
 source $HOME/.asdf/installs/erlang/$ERL_VSN/activate
 $REBAR3 local install
-{{- else }}
-exit 0
-{{- end }}
+{{ end -}}
