Add new git aliases: sh, shn, sw

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -6,7 +6,10 @@
   co = checkout
   lg = log --graph --all
   lgs = log --graph --all --abbrev-commit --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+  sh = show
+  shn = show --name-status
   st = status
+  sw = switch
 
 [core]
   editor = vim
